DAS-1701 - Revert leading slash changes for hierarchical variables.

--- a/test/sds/SDS_Regression.ipynb
+++ b/test/sds/SDS_Regression.ipynb
@@ -539,7 +539,7 @@
     "    no_int64_file_name = 'var_subsetter_no_int64.nc4'\n",
     "    no_int64_request = Request(collection=var_subsetter_info['collection'],\n",
     "                               granule_id=[var_subsetter_info['granule_id']],\n",
-    "                               variables=['gt1l/land_segments/dem_h'])\n",
+    "                               variables=['/gt1l/land_segments/dem_h'])\n",
     "\n",
     "    submit_and_download(harmony_client, no_int64_request, no_int64_file_name)\n",
     "    assert exists(no_int64_file_name), 'Unsuccessful non-Int64 Variable Subsetter request.'\n",
@@ -582,7 +582,7 @@
     "    int64_file_name = 'var_subsetter_int64.nc4'\n",
     "    int64_request = Request(collection=var_subsetter_info['collection'],\n",
     "                            granule_id=[var_subsetter_info['granule_id']],\n",
-    "                            variables=['gt1l/signal_photons/classed_pc_flag'])\n",
+    "                            variables=['/gt1l/signal_photons/classed_pc_flag'])\n",
     "\n",
     "    submit_and_download(harmony_client, int64_request, int64_file_name)\n",
     "    assert exists(int64_file_name), 'Unsuccessful Int64 Variable Subsetter request.'\n",
@@ -1031,7 +1031,7 @@
     "    hoss_maskfill_request = Request(collection=hoss_maskfill_info['collection'],\n",
     "                                    granule_id=hoss_maskfill_info['granule_id'],\n",
     "                                    shape=hoss_maskfill_info['shape_file_path'],\n",
-    "                                    variables=['Grid/precipitationCal'])\n",
+    "                                    variables=['/Grid/precipitationCal'])\n",
     "    submit_and_download(harmony_client, hoss_maskfill_request, hoss_maskfill_file_name)\n",
     "    assert exists(hoss_maskfill_file_name), 'Unsuccessful HOSS/MaskFill polygon spatial subset request.'\n",
     "\n",
@@ -1371,7 +1371,7 @@
     "    hoss_bounds_bbox = BBox(w=60, s=-15, e=75, n=0)\n",
     "    hoss_bounds_request = Request(collection=hoss_info['bounds_collection'],\n",
     "                                  granule_id=[hoss_info['bounds_granule_id']],\n",
-    "                                  variables=['Grid/precipitationCal'],\n",
+    "                                  variables=['/Grid/precipitationCal'],\n",
     "                                  spatial=hoss_bounds_bbox,\n",
     "                                  temporal={'start': datetime(2020, 1, 18, 18, 45, 0),\n",
     "                                            'stop': datetime(2020, 1, 18, 19, 45, 0)})\n",
@@ -1504,7 +1504,7 @@
     "traj_sub_non_prod_information = {'collection': Collection(id='C1242267295-EEDTEST'),\n",
     "                                 'granule_id': 'G1242274836-EEDTEST',\n",
     "                                 'shape_file_path': 'amazon_basin.geo.json',\n",
-    "                                 'requested_variables': ['BEAM0000/agbd'],\n",
+    "                                 'requested_variables': ['/BEAM0000/agbd'],\n",
     "                                 'retrieved_variables': ['/BEAM0000/agbd', '/BEAM0000/delta_time',\n",
     "                                                         '/BEAM0000/lat_lowestmode',\n",
     "                                                         '/BEAM0000/lon_lowestmode',\n",
