DAS-1701 - Remove leading slashes from requested variable names.

--- a/test/sds/SDS_Regression.ipynb
+++ b/test/sds/SDS_Regression.ipynb
@@ -927,7 +927,7 @@
     "    hoss_temporal_file_name = 'hoss_temporal.nc4'\n",
     "    hoss_temporal_request = Request(collection=hoss_info['temporal_collection'],\n",
     "                                    granule_id=hoss_info['temporal_granule_id'],\n",
-    "                                    variables=['/H1000'],\n",
+    "                                    variables=['H1000'],\n",
     "                                    temporal={'start': datetime(2021, 6, 9, 12, 0, 0),\n",
     "                                              'stop': datetime(2021, 6, 9, 16, 0, 0)})\n",
     "\n",
@@ -1506,9 +1506,9 @@
     "                                 'shape_file_path': 'amazon_basin.geo.json',\n",
     "                                 'requested_variables': ['/BEAM0000/agbd'],\n",
     "                                 'retrieved_variables': ['/BEAM0000/agbd', '/BEAM0000/delta_time',\n",
-    "                                                        '/BEAM0000/lat_lowestmode',\n",
-    "                                                        '/BEAM0000/lon_lowestmode',\n",
-    "                                                        '/BEAM0000/shot_number']}\n",
+    "                                                         '/BEAM0000/lat_lowestmode',\n",
+    "                                                         '/BEAM0000/lon_lowestmode',\n",
+    "                                                         '/BEAM0000/shot_number']}\n",
     "\n",
     "trajectory_subsetter_env = {Environment.LOCAL: traj_sub_non_prod_information,\n",
     "                            Environment.SIT: traj_sub_non_prod_information,\n",
