Adds test for default case where no concatenation is supplied
DAS-1721

--- a/test/n2z/N2Z_Regression.ipynb
+++ b/test/n2z/N2Z_Regression.ipynb
@@ -55,8 +55,6 @@
    "outputs": [],
    "source": [
     "from harmony import Collection, Environment, Client, Request\n",
-    "from os import makedirs\n",
-    "\n",
     "from utility import assert_result_has_correct_number_of_stores, print_success"
    ]
   },
@@ -69,7 +67,7 @@
     "\n",
     "This includes the Harmony `Client` object and `Collection` objects for each of the collections for which there are regression tests. The local, SIT and UAT Harmony instances all utilise resources from CMR UAT, meaning any non-production environment will use the same resources.\n",
     "\n",
-    "When adding a production entry to the dictionary below, the collection instances can be included directly in the production dictionary entry, as they do not need to be shared.\n"
+    "When adding a production entry to the dictionary below, the collection instances can be included directly in the production dictionary entry, as they do not need to be shared."
    ]
   },
   {
@@ -101,8 +99,7 @@
     "environment_information = collection_data.get(harmony_host_url)\n",
     "\n",
     "if environment_information is not None:\n",
-    "    harmony_client = Client(env=environment_information['env'])\n",
-    "    "
+    "    harmony_client = Client(env=environment_information['env'])"
    ]
   },
   {
@@ -110,7 +107,9 @@
    "id": "ae80e3cf",
    "metadata": {},
    "source": [
-    "## Test for a single, non-aggregated granule input"
+    "## Test for a single, non-aggregated granule input\n",
+    "\n",
+    "Makes a request, limiting the results to a single granule. Because the results aren't concatenated, we expect to find 1 Zarr store in the returned results."
    ]
   },
   {
@@ -122,9 +121,9 @@
    "source": [
     "if environment_information is not None:\n",
     "    imrg_request1 = Request(collection=environment_information['imerg_collection'], \n",
-    "                               max_results=1,\n",
-    "                               concatenate=False,\n",
-    "                               format='application/x-zarr')\n",
+    "                            max_results=1,\n",
+    "                            concatenate=False,\n",
+    "                            format='application/x-zarr')\n",
     "\n",
     "    job_id = harmony_client.submit(imrg_request1)\n",
     "    harmony_client.wait_for_processing(job_id, show_progress=True)\n",
@@ -132,8 +131,7 @@
     "    assert_result_has_correct_number_of_stores(results1, 1)\n",
     "    print_success('One granule, not aggregated, creates a single Zarr store.')    \n",
     "else:\n",
-    "    print('Skipping test: N2Z regression tests not configured for this environment.')    \n",
-    "\n"
+    "    print('Skipping test: N2Z regression tests not configured for this environment.')    "
    ]
   },
   {
@@ -141,7 +139,9 @@
    "id": "4b94959e-fd7c-4584-84dc-079ee53e6bfc",
    "metadata": {},
    "source": [
-    "## Test three non-aggregated granules input"
+    "## Test three non-aggregated granules input\n",
+    "\n",
+    "Makes a request, limiting the results to three granules. Because the results aren't concatenated, we expect to find 3 Zarr stores in the returned results."
    ]
   },
   {
@@ -153,16 +153,15 @@
    "source": [
     "if environment_information is not None:\n",
     "    imrg_request2 = Request(collection=environment_information['imerg_collection'],\n",
-    "                               max_results=3,\n",
-    "                               concatenate=False,\n",
-    "                               format='application/x-zarr')\n",
+    "                            max_results=3,\n",
+    "                            concatenate=False,\n",
+    "                            format='application/x-zarr')\n",
     "\n",
     "    job_id2 = harmony_client.submit(imrg_request2)\n",
     "    harmony_client.wait_for_processing(job_id2, show_progress=True)\n",
     "    results2 = harmony_client.result_json(job_id2)\n",
     "    assert_result_has_correct_number_of_stores(results2, 3)\n",
-    "    print_success('Three granules, not aggregated, create three Zarr stores.')\n",
-    "\n"
+    "    print_success('Three granules, not aggregated, create three Zarr stores.')"
    ]
   },
   {
@@ -170,7 +169,9 @@
    "id": "052ff62f-8115-46bd-b6db-d7232b823ec1",
    "metadata": {},
    "source": [
-    "##  Test two aggregated granules input"
+    "##  Test two aggregated granules input\n",
+    "\n",
+    "Makes a request, limiting the results to two granules. Because the results are concatenated, we expect to find just 1 Zarr store in the returned results."
    ]
   },
   {
@@ -182,23 +183,50 @@
    "source": [
     "if environment_information is not None:\n",
     "    imrg_request3 = Request(collection=environment_information['imerg_collection'],\n",
-    "                               max_results=2,\n",
-    "                               concatenate=True,\n",
-    "                               format='application/x-zarr')\n",
+    "                            max_results=2,\n",
+    "                            concatenate=True,\n",
+    "                            format='application/x-zarr')\n",
     "\n",
     "    job_id3 = harmony_client.submit(imrg_request3)\n",
     "    harmony_client.wait_for_processing(job_id3, show_progress=True)\n",
     "    results3 = harmony_client.result_json(job_id3)\n",
     "    assert_result_has_correct_number_of_stores(results3, 1)\n",
-    "    print_success('Two granules aggregated create a single Zarr store.')\n",
+    "    print_success('Two granules aggregated create a single Zarr store.')    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c4a498f-b27b-4374-906d-bd37a34f5222",
+   "metadata": {},
+   "source": [
+    "##  Test two granules input default concatentation\n",
     "\n",
-    "    "
+    "Makes a request, limiting the results to two granules. Because the default is not to concatenate, we expect to find 2 Zarr stores in the returned results."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0616ff17",
+   "id": "44712d48-c5aa-4a24-84c6-97c27b65eef3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if environment_information is not None:\n",
+    "    imrg_request4 = Request(collection=environment_information['imerg_collection'],\n",
+    "                            max_results=2,\n",
+    "                            format='application/x-zarr')\n",
+    "\n",
+    "    job_id4 = harmony_client.submit(imrg_request4)\n",
+    "    harmony_client.wait_for_processing(job_id4, show_progress=True)\n",
+    "    results4 = harmony_client.result_json(job_id4)\n",
+    "    assert_result_has_correct_number_of_stores(results4, 2)\n",
+    "    print_success('Two granules create two Zarr stores.')    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "078be146-5680-4b9d-8086-5c35428e27f2",
    "metadata": {},
    "outputs": [],
    "source": []
