Adds N2Z assert_zarr_store_matches_reference_data test
Updates regression tests to test the actual data from the test against a
reference data set.

DAS-1721

--- a/test/n2z/N2Z_Regression.ipynb
+++ b/test/n2z/N2Z_Regression.ipynb
@@ -55,7 +55,12 @@
    "outputs": [],
    "source": [
     "from harmony import Collection, Environment, Client, Request\n",
-    "from utility import assert_result_has_correct_number_of_stores, print_success"
+    "from utility import (\n",
+    "    assert_result_has_correct_number_of_stores,\n",
+    "    assert_zarr_store_matches_reference_data,\n",
+    "    get_zarr_store_location,\n",
+    "    print_success    \n",
+    ")"
    ]
   },
   {
@@ -191,6 +196,8 @@
     "    harmony_client.wait_for_processing(job_id3, show_progress=True)\n",
     "    results3 = harmony_client.result_json(job_id3)\n",
     "    assert_result_has_correct_number_of_stores(results3, 1)\n",
+    "    zarr_store = get_zarr_store_location(results3)\n",
+    "    assert_zarr_store_matches_reference_data(zarr_store, 'reference_data/sample.zarr')\n",
     "    print_success('Two granules aggregated create a single Zarr store.')    "
    ]
   },
