--- a/test/n2z/N2Z_Regression.ipynb
+++ b/test/n2z/N2Z_Regression.ipynb
@@ -58,9 +58,11 @@
     "from utility import (\n",
     "    assert_result_has_correct_number_of_stores,\n",
     "    assert_zarr_store_matches_reference_data,\n",
+    "    download_zarr_store,\n",
     "    get_zarr_store_location,\n",
     "    print_success    \n",
-    ")"
+    ")\n",
+    "from tempfile import TemporaryDirectory"
    ]
   },
   {
@@ -97,14 +99,16 @@
     "    },\n",
     "    'http://localhost:3000': {\n",
     "        **non_production_collection,\n",
-    "        'env': Environment.LOCAL\n",
+    "        'env': Environment.LOCAL,\n",
+    "        'endpoint_url': 'http://localhost:4566'\n",
     "    },\n",
     "}\n",
     "\n",
     "environment_information = collection_data.get(harmony_host_url)\n",
     "\n",
     "if environment_information is not None:\n",
-    "    harmony_client = Client(env=environment_information['env'])"
+    "    harmony_client = Client(env=environment_information['env'])\n",
+    "    endpoint_url = environment_information.get('endpoint_url', None)"
    ]
   },
   {
@@ -196,9 +200,25 @@
     "    harmony_client.wait_for_processing(job_id3, show_progress=True)\n",
     "    results3 = harmony_client.result_json(job_id3)\n",
     "    assert_result_has_correct_number_of_stores(results3, 1)\n",
+    "    \n",
     "    zarr_store = get_zarr_store_location(results3)\n",
-    "    assert_zarr_store_matches_reference_data(zarr_store, 'reference_data/sample.zarr')\n",
+    "    with TemporaryDirectory() as tmp_zarr_store:\n",
+    "        download_zarr_store(zarr_store, tmp_zarr_store, endpoint_url)\n",
+    "        assert_zarr_store_matches_reference_data(tmp_zarr_store, 'reference_data/sample.zarr')\n",
+    "        \n",
     "    print_success('Two granules aggregated create a single Zarr store.')    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adcde21f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "print(zarr_store)\n",
+    "print(endpoint_url)\n"
    ]
   },
   {
