--- a/test/n2z/N2Z_Regression.ipynb
+++ b/test/n2z/N2Z_Regression.ipynb
@@ -57,12 +57,12 @@
     "from harmony import Collection, Environment, Client, Request\n",
     "from utility import (\n",
     "    assert_result_has_correct_number_of_stores,\n",
-    "    assert_zarr_store_matches_reference_data,\n",
     "    download_zarr_store,\n",
     "    get_zarr_store_location,\n",
     "    print_success    \n",
     ")\n",
-    "from tempfile import TemporaryDirectory"
+    "from tempfile import TemporaryDirectory\n",
+    "import xarray as xr"
    ]
   },
   {
@@ -180,7 +180,9 @@
    "source": [
     "##  Test two aggregated granules input\n",
     "\n",
-    "Makes a request, limiting the results to two granules. Because the results are concatenated, we expect to find just 1 Zarr store in the returned results."
+    "Makes a request, limiting the results to two granules. Because the results are concatenated, we expect to find just 1 Zarr store in the returned results.\n",
+    "\n",
+    "Additionally we download the Zarr store and compare it with a reference store using Xarray."
    ]
   },
   {
@@ -204,21 +206,11 @@
     "    zarr_store = get_zarr_store_location(results3)\n",
     "    with TemporaryDirectory() as tmp_zarr_store:\n",
     "        download_zarr_store(zarr_store, tmp_zarr_store, endpoint_url)\n",
-    "        assert_zarr_store_matches_reference_data(tmp_zarr_store, 'reference_data/sample.zarr')\n",
+    "        downloaded_ds = xr.open_dataset(tmp_zarr_store, group='/Grid', engine='zarr')\n",
+    "        reference_ds = xr.open_dataset('reference_data/sample.zarr', group='/Grid')\n",
+    "        assert downloaded_ds.equals(reference_ds), 'reference and output Zarr stores did not match'\n",
     "        \n",
     "    print_success('Two granules aggregated create a single Zarr store.')    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "adcde21f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "print(zarr_store)\n",
-    "print(endpoint_url)\n"
    ]
   },
   {
