Adds note about necessary credentials.
DAS-1721

--- a/test/n2z/N2Z_Regression.ipynb
+++ b/test/n2z/N2Z_Regression.ipynb
@@ -22,7 +22,11 @@
     "The default value is for the UAT environment. When using this notebook there are two ways to use the non-default environment:\n",
     "\n",
     "* Run this notebook in a local Jupyter notebook server and change the value of `harmony_host_url` in the cell below to the value for the environment you require from the above list.\n",
-    "* Use the `run_notebooks.sh` script, which requires you to declare an environment variable `HARMONY_HOST_URL`. Set that environment variable to the value above that corresponds to the environment you want to test. That environment variable will take precedence over the default value in the cell below."
+    "* Use the `run_notebooks.sh` script, which requires you to declare an environment variable `HARMONY_HOST_URL`. Set that environment variable to the value above that corresponds to the environment you want to test. That environment variable will take precedence over the default value in the cell below.\n",
+    "\n",
+    "###  AWS permisisons\n",
+    "\n",
+    "This notebook uses boto3 to download a harmony created zarr store. In order to do this, credentials that have read access to s3 buckets must be set. The easiest way to do this is to ensure the environment variables AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY are set in the shell that before starting the notebook server.  "
    ]
   },
   {
