Address PR feedback

--- a/test/n2z/N2Z_Regression.ipynb
+++ b/test/n2z/N2Z_Regression.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "###  AWS permisisons\n",
     "\n",
-    "This notebook uses boto3 to download a harmony created zarr store. In order to do this, credentials that have read access to s3 buckets must be set. The easiest way to do this is to ensure the environment variables AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY are set in the shell that before starting the notebook server.  "
+    "This notebook uses boto3 to download a harmony created zarr store. In order to do this, s3 read access credentials must be set. The easiest way to do this is to ensure the environment variables AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY are set in the shell from where the notebook server is started.  "
    ]
   },
   {
