DAS-1721 Adds additional regression test to N2Z (#44)

--- a/test/n2z/N2Z_Regression.ipynb
+++ b/test/n2z/N2Z_Regression.ipynb
@@ -22,7 +22,11 @@
     "The default value is for the UAT environment. When using this notebook there are two ways to use the non-default environment:\n",
     "\n",
     "* Run this notebook in a local Jupyter notebook server and change the value of `harmony_host_url` in the cell below to the value for the environment you require from the above list.\n",
-    "* Use the `run_notebooks.sh` script, which requires you to declare an environment variable `HARMONY_HOST_URL`. Set that environment variable to the value above that corresponds to the environment you want to test. That environment variable will take precedence over the default value in the cell below."
+    "* Use the `run_notebooks.sh` script, which requires you to declare an environment variable `HARMONY_HOST_URL`. Set that environment variable to the value above that corresponds to the environment you want to test. That environment variable will take precedence over the default value in the cell below.\n",
+    "\n",
+    "###  AWS permisisons\n",
+    "\n",
+    "This notebook uses boto3 to download a harmony created zarr store. In order to do this, s3 read access credentials must be set. The easiest way to do this is to ensure the environment variables AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY are set in the shell from where the notebook server is started.  "
    ]
   },
   {
@@ -55,7 +59,14 @@
    "outputs": [],
    "source": [
     "from harmony import Collection, Environment, Client, Request\n",
-    "from utility import assert_result_has_correct_number_of_stores, print_success"
+    "from utility import (\n",
+    "    assert_result_has_correct_number_of_stores,\n",
+    "    download_zarr_store,\n",
+    "    get_zarr_store_location,\n",
+    "    print_success    \n",
+    ")\n",
+    "from tempfile import TemporaryDirectory\n",
+    "import xarray as xr"
    ]
   },
   {
@@ -92,14 +103,16 @@
     "    },\n",
     "    'http://localhost:3000': {\n",
     "        **non_production_collection,\n",
-    "        'env': Environment.LOCAL\n",
+    "        'env': Environment.LOCAL,\n",
+    "        'endpoint_url': 'http://localhost:4566'\n",
     "    },\n",
     "}\n",
     "\n",
     "environment_information = collection_data.get(harmony_host_url)\n",
     "\n",
     "if environment_information is not None:\n",
-    "    harmony_client = Client(env=environment_information['env'])"
+    "    harmony_client = Client(env=environment_information['env'])\n",
+    "    endpoint_url = environment_information.get('endpoint_url', None)"
    ]
   },
   {
@@ -171,7 +184,9 @@
    "source": [
     "##  Test two aggregated granules input\n",
     "\n",
-    "Makes a request, limiting the results to two granules. Because the results are concatenated, we expect to find just 1 Zarr store in the returned results."
+    "Makes a request, limiting the results to two granules. Because the results are concatenated, we expect to find just 1 Zarr store in the returned results.\n",
+    "\n",
+    "Additionally we download the Zarr store and compare it with a reference store using Xarray."
    ]
   },
   {
@@ -191,6 +206,14 @@
     "    harmony_client.wait_for_processing(job_id3, show_progress=True)\n",
     "    results3 = harmony_client.result_json(job_id3)\n",
     "    assert_result_has_correct_number_of_stores(results3, 1)\n",
+    "    \n",
+    "    zarr_store = get_zarr_store_location(results3)\n",
+    "    with TemporaryDirectory() as tmp_zarr_store:\n",
+    "        download_zarr_store(zarr_store, tmp_zarr_store, endpoint_url)\n",
+    "        downloaded_ds = xr.open_dataset(tmp_zarr_store, group='/Grid', engine='zarr')\n",
+    "        reference_ds = xr.open_dataset('reference_data/sample.zarr', group='/Grid')\n",
+    "        assert downloaded_ds.equals(reference_ds), 'reference and output Zarr stores did not match'\n",
+    "        \n",
     "    print_success('Two granules aggregated create a single Zarr store.')    "
    ]
   },
