--- a/test/harmony/Harmony.ipynb
+++ b/test/harmony/Harmony.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Harmony Regression Test Suite"
+    "# Harmony Regression Test Suite\n",
+    "\n",
+    "This test suite ensures some overall features of the main Harmony service work as expected. Currently that is limited to ensuring the expected services are deployed to all Harmony environments."
    ]
   },
   {
@@ -21,23 +23,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import os\n",
-    "import sys\n",
-    "module_path = os.path.abspath(os.path.join('..'))\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path)\n",
-    "    \n",
-    "import util\n",
-    "import pytest\n",
-    "import ipytest\n",
-    "\n",
-    "ipytest.autoconfig()\n",
-    "ipytest.config.raise_on_error = True"
+    "## Import required packages:"
    ]
   },
   {
@@ -46,24 +35,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%run_pytest[clean]\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ensure expected services are available, per the `/versions` endpoint:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expected_service_names = ['harmony/service-example', \n",
+    "                          'nasa/harmony-gdal-adapter', \n",
+    "                          'podaac/l2-subsetter']\n",
     "\n",
-    "@pytest.mark.parametrize('service_name', [\n",
-    "    'harmony/service-example', \n",
-    "    'nasa/harmony-gdal-adapter', \n",
-    "    'podaac/l2-subsetter'\n",
-    "])\n",
-    "def test_services_are_configured_in_harmony(service_name: str):\n",
-    "    services = util.api(harmony_host_url, 'versions')\n",
-    "    \n",
-    "    assert any([s['name'] == service_name for s in services])"
+    "versions_response = requests.get(f'{harmony_host_url}/versions')\n",
+    "versions_response.raise_for_status()\n",
+    "actual_services = versions_response.json()\n",
+    "\n",
+    "for expected_service_name in expected_service_names:\n",
+    "    assert any([service.get('name') == expected_service_name\n",
+    "                for service in actual_services]), f'Could not find service: {expected_service_name}'\n",
+    "\n",
+    "print('All expected services returned from /versions endpoint.')"
    ]
   }
  ],
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -77,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
