--- a/test/regridder/Regridder_Regression.ipynb
+++ b/test/regridder/Regridder_Regression.ipynb
@@ -140,7 +140,7 @@
    "source": [
     "## Test for full earth downsample of MERRA-2 data  (M2T1NXSLV)\n",
     "\n",
-    "Make a request specifying a single granule selecting parameters to create a small output grid (72x36):\n",
+    "Make a request specifying a single granule selecting parameters to create a 2.5 degree output grid (72x144):\n",
     "\n"
    ]
   },
@@ -157,13 +157,10 @@
     "    merra_request = Request(collection=environment_information['merra_collection'],\n",
     "                           granule_id=environment_information['merra_granules'][0],\n",
     "                           interpolation='Elliptical Weighted Averaging',\n",
-    "                           scale_size=(5.0, 5.0), scale_extent=(-180, -90, 180, 90),\n",
-    "                           crs='+proj=latlong +datum=WGS84 +no_defs', height=36, width=72)                       \n",
-    "\n",
-    "\n",
+    "                           scale_size=(2.5, 2.5), scale_extent=(-180, -90, 180, 90),\n",
+    "                            crs='+proj=latlong +datum=WGS84 +no_defs', height=72, width=144)                       \n",
     "    merra_job_id = harmony_client.submit(merra_request)\n",
     "    harmony_client.wait_for_processing(merra_job_id, show_progress=True)\n",
-    "\n",
     "    with TemporaryDirectory() as temp_dir:\n",
     "        downloaded_grid_outputs = [\n",
     "            file_future.result()\n",
@@ -172,12 +169,64 @@
     "        ]\n",
     "        reference_ds = xr.open_dataset('reference_data/MERRA2_400.tavg1_2d_slv_Nx.20210605_regridded.nc4')\n",
     "        output_ds =  xr.open_dataset(Path(temp_dir, downloaded_grid_outputs[0]))\n",
+    "        assert output_ds.equals(reference_ds), 'Generated data did not match reference dataset'\n",
+    "\n",
+    "\n",
+    "    print_success('Regrid MERRA2 Data Success')\n",
+    "else:\n",
+    "    print('Skipping test: regridder regression tests not configured for this environment.')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a8eb539-9d7d-4da0-8ca2-8f04431b4114",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "# Test ATL14\n",
+    "\n",
+    "The ATL14 data has multiple grids stored in the file.\n",
+    "\n",
+    "This test will regrid all grids ['global', 'npolar', and 'spolar'] to the same grid.\n",
+    "A small 5 degree grid is chosen to save space.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f00c8a5-285a-43bf-92fc-e3871a9f2881",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "if environment_information is not None:\n",
+    "    atl16_request = Request(collection=environment_information['atl16_collection'],\n",
+    "                           granule_id=environment_information['atl16_granules'][0],\n",
+    "                           interpolation='Elliptical Weighted Averaging',\n",
+    "                           scale_size=(5.0, 5.0), scale_extent=(-180, -90, 180, 90),\n",
+    "                           crs='+proj=latlong +datum=WGS84 +no_defs', height=36, width=72) \n",
+    "\n",
+    "\n",
+    "    atl16_job_id = harmony_client.submit(atl16_request)\n",
+    "    harmony_client.wait_for_processing(atl16_job_id, show_progress=True)\n",
+    "\n",
+    "    with TemporaryDirectory() as temp_dir:\n",
+    "        downloaded_grid_outputs = [\n",
+    "            file_future.result()\n",
+    "            for file_future\n",
+    "            in harmony_client.download_all(atl16_job_id, overwrite=True, directory=temp_dir)\n",
+    "        ]\n",
+    "        reference_ds = xr.open_dataset('reference_data/MERRA2_400.tavg1_2d_slv_Nx.20210605_regridded.nc4')\n",
+    "        output_ds =  xr.open_dataset(Path(temp_dir, downloaded_grid_outputs[0]))\n",
     "\n",
     "        assert output_ds.equals(reference_ds), 'Generated data did not match reference dataset'\n",
     "\n",
     "    print_success('Regrid MERRA2 Data Success')\n",
     "else:\n",
-    "    print('Skipping test: regridder regression tests not configured for this environment.')\n"
+    "    print('Skipping test: regridder regression tests not configured for this environment.')"
    ]
   }
  ],
