Test for ATL16 Data
DAS-1780

--- a/test/regridder/Regridder_Regression.ipynb
+++ b/test/regridder/Regridder_Regression.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "ab819831",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "# Harmony Regridding Service (HRS) [regridder] regression tests\n",
     "\n",
@@ -35,22 +33,19 @@
    "execution_count": null,
    "id": "a7b732c0",
    "metadata": {
-    "collapsed": false,
     "tags": [
      "parameters"
     ]
    },
    "outputs": [],
    "source": [
-    "harmony_host_url = 'http://localhost:3000'"
+    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "4979305a",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### Import required packages:"
    ]
@@ -59,9 +54,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "93128635",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from harmony import Collection, Environment, Client, Request\n",
@@ -75,9 +68,7 @@
   {
    "cell_type": "markdown",
    "id": "7e29b32f",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### Set up environment dependent variables:\n",
     "\n",
@@ -90,9 +81,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f5c95750",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "non_production_collection = {\n",
@@ -134,9 +123,7 @@
   {
    "cell_type": "markdown",
    "id": "ae80e3cf",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## Test for full earth downsample of MERRA-2 data  (M2T1NXSLV)\n",
     "\n",
@@ -148,9 +135,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b1d14fa0-a103-4c7b-951c-0345970b41d8",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "if environment_information is not None:\n",
@@ -171,7 +156,6 @@
     "        output_ds =  xr.open_dataset(Path(temp_dir, downloaded_grid_outputs[0]))\n",
     "        assert output_ds.equals(reference_ds), 'Generated data did not match reference dataset'\n",
     "\n",
-    "\n",
     "    print_success('Regrid MERRA2 Data Success')\n",
     "else:\n",
     "    print('Skipping test: regridder regression tests not configured for this environment.')\n"
@@ -180,15 +164,14 @@
   {
    "cell_type": "markdown",
    "id": "3a8eb539-9d7d-4da0-8ca2-8f04431b4114",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "# Test ATL14\n",
     "\n",
     "The ATL14 data has multiple grids stored in the file.\n",
     "\n",
     "This test will regrid all grids ['global', 'npolar', and 'spolar'] to the same grid.\n",
+    "\n",
     "A small 5 degree grid is chosen to save space.\n",
     "\n"
    ]
@@ -197,19 +180,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6f00c8a5-285a-43bf-92fc-e3871a9f2881",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "if environment_information is not None:\n",
     "    atl16_request = Request(collection=environment_information['atl16_collection'],\n",
     "                           granule_id=environment_information['atl16_granules'][0],\n",
     "                           interpolation='Elliptical Weighted Averaging',\n",
-    "                           scale_size=(5.0, 5.0), scale_extent=(-180, -90, 180, 90),\n",
-    "                           crs='+proj=latlong +datum=WGS84 +no_defs', height=36, width=72) \n",
-    "\n",
-    "\n",
+    "                           scale_size=(5.0, 5.0),\n",
+    "                            scale_extent=(-180, -90, 180, 90),\n",
+    "                           crs='EPSG:4326', height=36, width=72) \n",
     "    atl16_job_id = harmony_client.submit(atl16_request)\n",
     "    harmony_client.wait_for_processing(atl16_job_id, show_progress=True)\n",
     "\n",
@@ -219,12 +199,12 @@
     "            for file_future\n",
     "            in harmony_client.download_all(atl16_job_id, overwrite=True, directory=temp_dir)\n",
     "        ]\n",
-    "        reference_ds = xr.open_dataset('reference_data/MERRA2_400.tavg1_2d_slv_Nx.20210605_regridded.nc4')\n",
+    "        reference_ds = xr.open_dataset('reference_data/')\n",
     "        output_ds =  xr.open_dataset(Path(temp_dir, downloaded_grid_outputs[0]))\n",
     "\n",
-    "        assert output_ds.equals(reference_ds), 'Generated data did not match reference dataset'\n",
+    "        assert output_ds.equals(reference_ds), 'Regridded ATL16 data did not match reference dataset'\n",
     "\n",
-    "    print_success('Regrid MERRA2 Data Success')\n",
+    "    print_success('Regrid ATL16 Data Success')\n",
     "else:\n",
     "    print('Skipping test: regridder regression tests not configured for this environment.')"
    ]
@@ -233,20 +213,8 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "argv": [
-    "/Users/savoie/.pyenv/versions/miniconda3-3.9-4.11.0/envs/harmony-regression-tests/bin/python",
-    "-m",
-    "ipykernel_launcher",
-    "-f",
-    "{connection_file}"
-   ],
    "display_name": "Python 3 (ipykernel)",
-   "env": null,
-   "interrupt_mode": "signal",
    "language": "python",
-   "metadata": {
-    "debugger": true
-   },
    "name": "python3"
   },
   "language_info": {
