Adds engine and netcdf to environment.
DAS-1780

--- a/test/regridder/Regridder_Regression.ipynb
+++ b/test/regridder/Regridder_Regression.ipynb
@@ -152,8 +152,8 @@
     "            for file_future\n",
     "            in harmony_client.download_all(merra_job_id, overwrite=True, directory=temp_dir)\n",
     "        ]\n",
-    "        reference_ds = xr.open_dataset('reference_data/MERRA2_400.tavg1_2d_slv_Nx.20210605_regridded.nc4')\n",
-    "        output_ds =  xr.open_dataset(Path(temp_dir, downloaded_grid_outputs[0]))\n",
+    "        reference_ds = xr.open_dataset('reference_data/MERRA2_400.tavg1_2d_slv_Nx.20210605_regridded.nc4', engine='netcdf4')\n",
+    "        output_ds =  xr.open_dataset(Path(temp_dir, downloaded_grid_outputs[0]), engine='netcdf4')\n",
     "        assert output_ds.equals(reference_ds), 'Generated data did not match reference dataset'\n",
     "\n",
     "    print_success('Regrid MERRA2 Data Success')\n",
@@ -199,8 +199,8 @@
     "            for file_future\n",
     "            in harmony_client.download_all(atl16_job_id, overwrite=True, directory=temp_dir)\n",
     "        ]\n",
-    "        reference_ds = xr.open_dataset('reference_data/')\n",
-    "        output_ds =  xr.open_dataset(Path(temp_dir, downloaded_grid_outputs[0]))\n",
+    "        reference_ds = xr.open_dataset('reference_data/ATL16_20200308000030_11040601_004_01_regridded.h5', engine='netcdf4')\n",
+    "        output_ds =  xr.open_dataset(Path(temp_dir, downloaded_grid_outputs[0]), engine='netcdf4')\n",
     "\n",
     "        assert output_ds.equals(reference_ds), 'Regridded ATL16 data did not match reference dataset'\n",
     "\n",
