DAS-1761 - Fix minor typos in notebook, and remove whitespace.

--- a/test/regridder/Regridder_Regression.ipynb
+++ b/test/regridder/Regridder_Regression.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# Harmony Regridding Service (HRS) [regridder] regression tests\n",
     "\n",
-    "This Jupyter notebook runs a suite of regression tests against some requeests against the Harmony Regridding Service.\n",
+    "This Jupyter notebook runs a suite of regression tests against some requests against the Harmony Regridding Service.\n",
     "\n",
-    "We use The *GPM IMERG Final Precipitation L3 Half Hourly 0.1 degree x 0.1 degree V06 ([GPM_3IMERGHH](https://search.uat.earthdata.nasa.gov/search?q=C1245618475-EEDTEST)) at GES DISC* is chosen for its size ~10Mb per granule. \n",
+    "These tests use the a MERRA-2 hourly collection of time averaged data ([M2T1NXSLV](https://cmr.earthdata.nasa.gov/search/concepts/C1276812863-GES_DISC.html)) and the ICESat-2/ATL16 Weekly Gridded Atmosphere collection ([ATL16](https://cmr.earthdata.nasa.gov/search/concepts/C2153575232-NSIDC_CPRD.html)) available from GES DISC and NSIDC, respectively.\n",
     "\n",
     "\n",
     "## Set the Harmony environment:\n",
@@ -24,8 +24,7 @@
     "The default value is for the UAT environment. When using this notebook there are two ways to use the non-default environment:\n",
     "\n",
     "* Run this notebook in a local Jupyter notebook server and change the value of `harmony_host_url` in the cell below to the value for the environment you require from the above list.\n",
-    "* Use the `run_notebooks.sh` script, which requires you to declare an environment variable `HARMONY_HOST_URL`. Set that environment variable to the value above that corresponds to the environment you want to test. That environment variable will take precedence over the default value in the cell below.\n",
-    "\n"
+    "* Use the `run_notebooks.sh` script, which requires you to declare an environment variable `HARMONY_HOST_URL`. Set that environment variable to the value above that corresponds to the environment you want to test. That environment variable will take precedence over the default value in the cell below."
    ]
   },
   {
@@ -128,7 +127,8 @@
     "## Test for full earth downsample of MERRA-2 data  (M2T1NXSLV)\n",
     "\n",
     "Make a request specifying a single granule selecting parameters to create a 2.5 degree output grid (72x144):\n",
-    "\n"
+    "\n",
+    "This test will regrid all grids ['global', 'npolar', and 'spolar'] to the same grid, explicitly stating the `scaleExtent`, `scaleSize`, `height`, `width` and `crs` for the Harmony request, instead of using a UMM-Grid object."
    ]
   },
   {
@@ -143,7 +143,7 @@
     "                           granule_id=environment_information['merra_granules'][0],\n",
     "                           interpolation='Elliptical Weighted Averaging',\n",
     "                           scale_size=(2.5, 2.5), scale_extent=(-180, -90, 180, 90),\n",
-    "                            crs='+proj=latlong +datum=WGS84 +no_defs', height=72, width=144)                       \n",
+    "                           crs='+proj=latlong +datum=WGS84 +no_defs', height=72, width=144)                       \n",
     "    merra_job_id = harmony_client.submit(merra_request)\n",
     "    harmony_client.wait_for_processing(merra_job_id, show_progress=True)\n",
     "    with TemporaryDirectory() as temp_dir:\n",
@@ -158,7 +158,7 @@
     "\n",
     "    print_success('Regrid MERRA2 Data Success')\n",
     "else:\n",
-    "    print('Skipping test: regridder regression tests not configured for this environment.')\n"
+    "    print('Skipping test: regridder regression tests not configured for this environment.')"
    ]
   },
   {
@@ -166,14 +166,13 @@
    "id": "3a8eb539-9d7d-4da0-8ca2-8f04431b4114",
    "metadata": {},
    "source": [
-    "# Test ATL14\n",
+    "# Test ATL16\n",
     "\n",
-    "The ATL14 data has multiple grids stored in the file.\n",
+    "The ATL16 data has multiple grids stored in the file.\n",
     "\n",
-    "This test will regrid all grids ['global', 'npolar', and 'spolar'] to the same grid.\n",
+    "This test will regrid all grids ['global', 'npolar', and 'spolar'] to the same grid, explicitly stating the `scaleExtent`, `scaleSize`, `height`, `width` and `crs` for the Harmony request, instead of using a UMM-Grid object.\n",
     "\n",
-    "A small 5 degree grid is chosen to save space.\n",
-    "\n"
+    "A small 5 degree grid is chosen to save space."
    ]
   },
   {
@@ -188,7 +187,7 @@
     "                           granule_id=environment_information['atl16_granules'][0],\n",
     "                           interpolation='Elliptical Weighted Averaging',\n",
     "                           scale_size=(5.0, 5.0),\n",
-    "                            scale_extent=(-180, -90, 180, 90),\n",
+    "                           scale_extent=(-180, -90, 180, 90),\n",
     "                           crs='EPSG:4326', height=36, width=72) \n",
     "    atl16_job_id = harmony_client.submit(atl16_request)\n",
     "    harmony_client.wait_for_processing(atl16_job_id, show_progress=True)\n",
@@ -227,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   },
   "name": "Regridder_Regression.ipynb"
  },
